--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 :root {
   --primary-color: #047aed;
   --secondary-color: #1c3fa8;
   --dark-color: #002240;
-  --light-color: #f4f4f4;
+  --light-color: #f0f5fa;
   --success-color: #5cb85c;
   --error-color: #d9534f;
 }
 
 * {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Space Grotesk', sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
 body {
-  height: 100vh;
+  height: 100%;
+  background: linear-gradient(0.33turn, var(--primary-color), #2291ff, var(--secondary-color), #025eba);
+  background-size: 400% 400%;
   color: #333;
   line-height: 1.6;
+  animation: GradientBackground 12s ease infinite;
 }
 
 ul {
@@ -44,6 +47,10 @@ img {
   width: 100%;
 }
 
+svg {
+  margin: 0 .5rem 0 0;
+}
+
 code,
 pre {
   background: #333;
@@ -58,7 +65,7 @@ pre {
 
 /* Navbar */
 .navbar {
-  background-color: var(--primary-color);
+  background-color: transparent;
   color: #fff;
   height: 70px;
 }
@@ -77,24 +84,28 @@ pre {
   border-bottom: 2px #fff solid;
 }
 
+.navbar a.active {
+  border-bottom: 2px #fff solid;
+}
+
 .navbar .flex {
   justify-content: space-between;
 }
 
+.navbar .logo-container.flex {
+  flex-direction: row;
+}
+
 /* Showcase */
 .showcase {
-  height: 400px;
-  background-color: var(--primary-color);
+  height: 50vh;
+  background-color: transparent;
   color: #fff;
   position: relative;
 }
 
-.showcase h1 {
-  font-size: 40px;
-}
-
 .showcase p {
-  margin: 20px 0;
+  margin: 20px 0 24px;
   text-wrap: balance;
 }
 
@@ -105,7 +116,8 @@ pre {
 }
 
 .showcase-text {
-  animation: slideInFromLeft, fadeIn 0.5s ease-in;
+  animation: slideInFromLeft 0.5s ease-in;
+  padding-bottom: 5vh;
 }
 
 .showcase-form {
@@ -118,10 +130,6 @@ pre {
   animation: slideInFromRight 0.5s ease-in;
 }
 
-.showcase-form h2{
-  margin-bottom: 28px;
-}
-
 .showcase-form .form-control {
   margin: 20px 0;
 }
@@ -130,7 +138,6 @@ pre {
 .showcase-form input[type='email'] {
   border: 0;
   border-radius: 8px;
-  /* border-bottom: 1px solid #b4becb; */
   background-color: #f1f5fa;
   width: 100%;
   padding: 16px;
@@ -141,75 +148,135 @@ pre {
   width: 100%;
 }
 
-/* .showcase-form input:focus {
-  outline: none;
-} */
-
 .showcase::before,
 .showcase::after {
   content: '';
   position: absolute;
-  height: 100px;
-  bottom: -70px;
+  height: 16vh;
+  bottom: -8vh;
   right: 0;
   left: 0;
-  background-color: #fff;
-  transform: skewY(-2.4deg);
-  /* -webkit-transform: skewY(-2.4deg);
-  -moz-transform: skewY(-2.4deg);
-  -ms-transform: skewY(-2.4deg); */
+  z-index: -100;
+  background-color: var(--light-color);
+  transform: skewY(-2.0deg);
 }
 
 /* Stats */
 .stats {
-  padding-top: 100px;
-  animation: slideInFromBottom .5s ease-in;
+  padding-top: 40px;
+  position: relative;
+  background-color: var(--light-color);
 }
 
 .stats-heading {
-  max-width: 620px;
+  max-width: 900px;
+  font-size: 2rem;
   margin: 4rem auto;
+  text-wrap: balance;
+  line-height: 1.6;
+  animation: fadeIn .5s ease-in;
 }
 
 .stats .grid h3 {
   font-size: 35px;
+  margin-top: 1rem;
+  font-weight: 500;
+  animation: slideInFromBottom .5s ease-in;
 }
 
 .stats .grid p {
   font-size: 20px;
-  font-weight: bold;
+  color: #63707d;
+  animation: slideInFromBottom .5s ease-in;
+}
+
+.stats::before,
+.stats::after {
+  content: '';
+  position: absolute;
+  height: 30vh;
+  bottom: -10vh;
+  right: 0;
+  left: 0;
+  z-index: -100;
+  background-color: var(--light-color);
+  transform: skewY(-2.0deg);
 }
 
 /* CLI */
+.cli {
+  max-width: 1100px;
+  margin: 0 auto;
+  border-radius: 12px;
+}
+
 .cli .grid {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
+}
+
+.cli .grid div {
+  padding: .5rem;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  justify-content: flex-start;
+}
+
+.cli .grid div i {
+  font-size: 1.4rem;
+  padding: 12px;
+}
+
+.cli .grid div p {
+  font-size: 1rem;
 }
 
 .cli .grid > *:first-child {
   grid-column: 1 / span 2;
   grid-row: 1 / span 2;
   min-width: 320px;
+  width: 100%;
+  height: auto;
 }
 
 /* Cloud */
+.cloud {
+  background-color: transparent;
+}
+
 .cloud .grid {
   grid-template-columns: 4fr 3fr;
 }
 
-.cloud img {
+.cloud svg {
   max-width: 500px;
+  height: auto; 
   margin: 1rem auto;
 }
 
 /* Languages */
+.languages {
+  max-width: 1100px;
+  padding: 1rem 0;
+  margin: 3rem auto;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.7);
+  justify-self: center;
+}
+
 .languages .flex {
   flex-wrap: wrap;
+  padding: 0;
 }
 
 .languages .card {
   text-align: center;
-  margin: 18px 10px 40px;
+  margin: 0.5rem;
+}
+
+.languages .card h4 {
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .languages .card h4 {
@@ -218,65 +285,224 @@ pre {
 }
 
 .languages .card:hover {
-  transform: translateY(-15px);
+  transform: scale(1.02);
 }
 
 /* Features */
+.features-head, 
+.docs-head {
+  margin-bottom: 10vh;
+  position: relative;
+}
+
+.features-head .grid div {
+  animation: slideInFromLeft .5s ease-in; 
+}
+
 .features-head img,
 .docs-head img {
-  width: 200px;
+  width: 20vh;
+  height: 20vh;
   justify-self: flex-end;
+  opacity: 12%;
+  animation: slideInFromRight .5s ease-in; 
+}
+
+.features-sub-head {
+  padding-bottom: 0;
+  position: relative;
+  text-wrap: balance;
+  z-index: 0; 
+}
+
+.features-sub-head .grid {
+  grid-template-columns: 1fr 2fr;
+  gap: 2rem;
 }
 
 .features-sub-head img {
-  width: 300px;
-  justify-self: flex-end;
+  max-width: 300px;
+  max-height: 300px;
+  justify-self: center;
+  animation: fadeIn .5s ease-in;
+}
+
+.features-sub-head .grid div {
+  animation: slideInFromBottom .5s ease-in;
+}
+
+.features-main {
+  background: linear-gradient(180deg, var(--light-color), #d0e3f5);
 }
 
 .features-main .card {
   margin: 0;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-wrap: balance;
 }
+
 
 .features-main .card > i {
-  margin-right: 20px;
+  padding: 1rem;
+  margin-right: 1rem;
+  width: 100px;
+  flex-shrink: 0;
+  text-align: center;
 }
 
-.features-main .grid > i {
-  padding: 30px;
+.features-main .card .flex {
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
-.features-main .grid > *:first-child {
-  grid-column: 1 / span 3;
+.features-main .card h4 {
+  font-size: 1.2rem;
+  margin-top: 10px;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
-.features-main .grid > *:nth-child() {
-  grid-column: 1 / span 2;
+.features-sub-head::before,
+.features-sub-head::after {
+  content: '';
+  position: absolute;
+  height: 10vh;
+  top: -5vh;
+  right: 0;
+  left: 0;
+  z-index: -100;
+  background-color: var(--light-color);
+  transform: skewY(-2.0deg);
 }
 
 /* Docs */
+.docs-head .grid div {
+  animation: slideInFromLeft .5s ease-in;
+}
+
+.docs-head img {
+  padding: 2rem 0;
+}
+
+.docs-main {
+  background: linear-gradient(180deg, var(--light-color), #d7e7f7);
+  position: relative;
+}
+
 .docs-main h3 {
   margin: 20px 0;
 }
 
 .docs-main .grid {
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
   align-items: flex-start;
+  padding-bottom: 3rem;
+}
+
+.docs-main .grid > :first-child {
+  position: sticky;
+  top: 0;
+}
+
+.docs-main::before,
+.docs-main::after {
+  content: '';
+  position: absolute;
+  height: 10vh;
+  top: -5vh;
+  right: 0;
+  left: 0;
+  z-index: -100;
+  background-color: var(--light-color);
+  transform: skewY(-2.0deg);
+}
+
+.docs-main nav {
+  font-size: 17px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  animation: slideInFromLeft .5s ease-in;
+}
+
+.docs-main nav > :nth-child(2) {
+  padding-bottom: .5rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.docs-main nav a,
+.docs-main nav h4 {
+  display: block;
+  width: 100%;
+  padding: .6rem;
+}
+
+.docs-main nav a {
+  border-radius: 8px;
+}
+
+.docs-main nav h4 {
+  margin: .5rem 0 0;
+  color: var(--secondary-color);
 }
 
 .docs-main nav li {
   font-size: 17px;
-  padding-bottom: 5px;
-  margin-bottom: 5px;
-  border-bottom: 1px #ccc solid;
 }
 
-.docs-main a:hover {
+.docs-main li a:hover {
   font-weight: bold;
+  background-color: rgba(30, 143, 255, 0.08);
+}
+
+.docs-main .card {
+  align-items: flex-start;
+  animation: fadeIn .5s ease-in;
+  padding: 1.5rem;
+}
+
+.docs-main .card section {
+  margin-top: 1rem;
+}
+
+.docs-main .card h3 {
+  margin: .6rem 0;
 }
 
 /* Footer */
+.footer {
+  color: var(--light-color);
+}
+
+.footer .social {
+  margin: 0 10px;
+
+}
+
 .footer .social a {
   margin: 0 10px;
+}
+
+.footer .logo-container {
+  justify-content: flex-start;
+}
+
+.footer li a {
+  display: block;
+  padding: .6rem;
+}
+
+.footer .flex-column p {
+  margin: 0;
+  padding: 1.5rem 0;
+  color: rgba(255, 255, 255, 0.7);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.footer .flex-column a {
+ color: #fff;
+ text-decoration: underline;
 }
 
 /* Animations */
@@ -320,7 +546,6 @@ pre {
   }
 }
 
-/* Animations */
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -329,6 +554,12 @@ pre {
   100% {
     opacity: 100%;
   }
+}
+
+@keyframes GradientBackground {
+  0%   { background-position: 0%   50%; }
+  50%  { background-position: 100% 50%; }
+  100% { background-position: 0%   50%; }
 }
 
 
@@ -353,6 +584,7 @@ pre {
     text-align: center;
     margin-top: 40px;
     animation: slideInFromTop 0.5s ease-in;
+    padding-bottom: 0;
   }
 
   .showcase-form {
@@ -361,31 +593,60 @@ pre {
     animation: slideInFromBottom 0.5s ease-in;
   }
 
+  .cli {
+    margin: 0 .5rem;
+  }
+
   .cli .grid > *:first-child {
     grid-column: 1;
     grid-row: 1;
+    width: 100%;
+  }
+
+  .languages {
+    padding: 1rem 0;
+    margin: 1rem .5rem;
   }
 
   .features-head,
   .features-sub-head,
   .docs-head {
     text-align: center;
+    text-wrap: balance;
   }
 
-  .features-head img,
+  .features-sub-head .grid {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
   .features-sub-head img,
-  .docs-head img {
+  .features-sub-head svg {
     justify-self: center;
   }
 
-  .features-main .grid > *:first-child,
-  .features-main .grid > *:nth-child(2) {
-    grid-column: 1;
+  .features-head img,
+  .docs-head img {
+    display: none;
+  }
+
+  .docs-main .grid > :first-child {
+    position: static;
+    padding: 0;
+  }
+
+  .docs-main .grid .card {
+    margin: 0;
+    padding: 1rem;
   }
 }
 
 /* Mobile */
-@media(max-width: 500px) {
+@media(max-width: 650px) {
+  .container {
+    padding: 0 1rem;
+  }
+
   .navbar {
     height: 110px;
   }
@@ -396,10 +657,77 @@ pre {
 
   .navbar ul {
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
   }
 
   .showcase-form {
-    max-width: 300px;
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .stats-heading {
+    font-size: 1.5rem;
+  }
+
+  .cli, .cli .container {
+    padding: 1rem;
+  }
+
+  .cloud svg {
+    width: 80vw;
+  }
+
+  .languages {
+    padding: 1rem 0;
+    margin: 1rem .5rem;
+  }
+
+  .languages h2 {
+    font-size: 1.6rem;
+  }
+  
+  .languages .container {
+    padding: 1rem;
+  }
+
+  .features-head img,
+  .docs-head img {
+    width: 60%;
+  }
+
+  .features-sub-head svg {
+    width: 80%;
+    height: auto;
+  }
+
+  .features-main .card {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .features-main .card .flex {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .features-main .card i {
+    margin: 0;
+  }
+
+  .features-main .card p {
+    text-align: center;
+    text-wrap: balance;
+  }
+
+  footer .grid > * {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+
+  footer .grid > :first-child {
+    flex-direction: column;
+    align-items: center;
   }
 }
