--- a/css/utilities.css
+++ b/css/utilities.css
@@ -8,7 +8,7 @@
 .card {
   background-color: #fff;
   color: #333;
-  border-radius: 10px;
+  border-radius: 12px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
   margin: 10px;
@@ -21,7 +21,7 @@
   background: var(--primary-color);
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   font-size: 1rem;
 }
 
@@ -50,6 +50,11 @@
   color: #333;
 }
 
+.bg-transparent, .btn-transparent {
+  background-color: transparent;
+  color: #fff;
+}
+
 .bg-primary a,
 .btn-primary a,
 .bg-secondary a,
@@ -62,6 +67,10 @@
 /* Text colors */
 .text-primary {
   color: var(--primary-color);
+}
+
+.text-secondary {
+  color: var(--secondary-color);
 }
 
 .text-dark {
@@ -77,6 +86,7 @@
 .lead {
   font-size: 20px;
   text-wrap: balance;
+  opacity: 80%;
 }
 
 .sm {
@@ -101,18 +111,25 @@
 
 .alert {
  background-color: var(--light-color);
- padding: 10px 20px;
- font-weight: bold;
- margin: 15px 0;
+ padding: 1rem;
+ margin: 1rem 0;
 }
 
 .alert i {
+  padding: 0.2rem 0.5rem;
   margin-right: 10px;
+  color: var(--success-color);
+}
+
+.alert p {
+  margin: 0;
 }
 
 .alert-success {
-  background-color: var(--success-color);
-  color: #fff;
+  display: flex;
+  align-items: flex-start;
+  border-left: 2px solid var(--success-color);
+  background-color: rgba(92, 184, 92, .1);
 }
 
 .alert-error {
@@ -222,4 +239,22 @@
 }
 .p-5 {
   padding: 4rem;
+}
+
+@media(max-width: 650px) {
+  .sm {
+    font-size: 1rem;
+  }
+  
+  .md {
+    font-size: 1.5rem;
+  }
+  
+  .lg {
+    font-size: 2rem;
+  }
+  
+  .xl {
+    font-size: 3rem;
+  }
 }
