--- a/css/utilities.css
+++ b/css/utilities.css
@@ -14,6 +14,12 @@
   margin: 10px;
 }
 
+.well {
+  background-color: var(--light-color);
+  border-radius: 8px;
+  padding: 1.4rem;
+}
+
 .btn {
   display: inline-block;
   padding: 10px 30px;
